@@ -42,15 +42,24 @@
   <sect3 id="rnbrowser">
     <title>Web Browser</title>
 
-    <para>GNOME's Epiphany web browser has some more enhancements.</para>
+    <para>GNOME's Epiphany web browser has some more enhancements. For instance, working with bookmarks is now even easier:
+    <itemizedlist>
+    <listitem><para>Bookmarks toolbars are easier to manipulate.</para></listitem>
+    <listitem><para>Bookmarks hierarchies are preserved when importing.</para></listitem>
+    <listitem><para>Topic can be added directly from the new bookmark dialog.</para></listitem>
+    <listitem><para>Whole bookmarks folders can be opened in tabs.</para></listitem>
+    </itemizedlist>
+    </para>
 
-    <para>Improvements include:
+    <para>Other web browser improvements include:
     <itemizedlist>
     <listitem><para>Popup windows can now be blocked for specific web sites.</para></listitem>
-    <listitem><para>There is now an offline mode .</para></listitem>
-    <listitem><para>Epiphany can now import its own bookmarks format.</para></listitem>
+    <listitem><para>There is now an offline mode.</para></listitem>
+    <listitem><para>System administrators can now lockdown more features.</para></listitem>
     </itemizedlist>
-
+    </para>
+   
+    <para>
     <figure id="rnscreenshot-epiphany">
       <title>The web browser</title>
         <screenshot>
