@@ -1,5 +1,9 @@
 2004-09-13  Murray Cumming  <murrayc@murrayc.com>
 
+	* rnapplications.xml: Mentioned epiphany changes from Marco.
+
+2004-09-13  Murray Cumming  <murrayc@murrayc.com>
+
 	* press_release.sxw: Updated the text for 2.8. We still need the 
 	quotes though.
 
